--- a/admissions.html
+++ b/admissions.html
@@ -1177,6 +1177,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="supabase-config.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
