addition of irs policies

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -5,20 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Jeressar High School</title>
     
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'methylene-blue': '#0080FF',
-                        'deep-navy': '#003366'
-                    }
-                }
-            }
-        }
-    </script>
+    <!-- Tailwind CSS Production Build -->
+    <link rel="stylesheet" href="tailwind-production.css">
     
     <style>
         .table-container {
